--- a/index.html
+++ b/index.html
@@ -3,13 +3,31 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Comprehensive workout plan with embedded exercise videos">
   <title>Sharath Workout Plan</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="lazy-load.js"></script>
 </head>
 
 <body>
+  <div id="loading-message" style="
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.9);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: #3498db;
+    z-index: 9999;
+  ">
+    Optimizing page for mobile viewing...
+  </div>
   <div class="container">
     <h1 id="exercises">Exercises</h1>
     <h2 id="week-1">Week 1:</h2>
